2005-02-08  Paul Brook  <paul@codesourcery.com>

	* elflink.c (elf_link_input_bfd): Ignore symbols from null input
	sections.

2005-02-08  Hans-Peter Nilsson  <hp@axis.com>

	* elflink.c (elf_link_add_object_symbols): Don't add "warning: "
	prefix here.

2005-02-07  Maciej W. Rozycki  <macro@mips.com>

	* elf64-mips.c: Fix formatting throughout.

2005-02-07  Maciej W. Rozycki  <macro@mips.com>

	* elfn32-mips.c (elf_mips_howto_table_rela): Fix a comment typo.

2005-02-07  Alexandre Oliva  <aoliva@redhat.com>

	* elf32-frv.c (FRVFDPIC_SYM_LOCAL): Remove special handling for
	*ABS*/*UND* sections.
	(elf32_frv_relocate_section): Move zero-addend-required error...
	(_frv_emit_got_relocs_plt_entries): ... here.  Report error for
	missing needed TLS section.

2005-02-07  Hans-Peter Nilsson  <hp@axis.com>

	* aoutx.h (NAME(aout,find_nearest_line)): Correct case for N_SO
	being the last symbol.
	(aout_link_add_symbols): Just return TRUE if a warning
	symbol was last.

2005-02-07  Maciej W. Rozycki  <macro@mips.com>

	* elf32-mips.c (mips_elf_gprel32_reloc): Reject
	R_MIPS_GPREL32 relocations against external symbols.
	* elf64-mips.c (mips_elf64_gprel32_reloc): Replace an incorrect
	comment.

2005-02-07  Alan Modra  <amodra@bigpond.net.au>

	* elf-bfd.h (elf_string_from_elf_strtab): Delete macro.
	* elf.c (bfd_elf_string_from_elf_section): Expand occurrence of
	elf_string_from_elf_strtab.
	(_bfd_elf_setup_group_pointers, bfd_section_from_shdr): Likewise.
	(bfd_section_from_shdr): For SHT_SYMTAB, load SHT_SYMTAB_SHNDX too
	if it exists.  Don't do the reverse for SHT_SYMTAB_SHNDX.  For
	SHT_STRTAB, check whether the strtab is for symtab or dynsymtab by
	looking at cached symtab info first, before iterating over headers.
	For SHT_REL and SHT_RELA, load dynsymtab if needed.
	* elfcode.h (elf_object_p): Don't load section header stringtab
	specially.

2005-02-06  H.J. Lu  <hongjiu.lu@intel.com>

	* elf32-i386.c (elf_i386_relocate_section): Disallow R_386_GOTOFF